@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.13 2003/12/03 17:08:24 recht Exp $
+# $NetBSD: Makefile,v 1.14 2004/01/16 06:40:50 xtraeme Exp $
 #
 
 DISTNAME=	mono-0.29
+PKGREVISION=	1
 CATEGORIES=	lang
 MASTER_SITES=	http://www.go-mono.org/archive/
 
@@ -10,6 +11,8 @@ HOMEPAGE=	http://www.go-mono.org/
 COMMENT=	Open source implementation of the .NET Development Framework
 
 BUILD_DEPENDS+=		bison-[0-9]*:../../devel/bison
+
+CONFLICTS=		pnet-[0-9]*
 
 # XXX please test
 NOT_FOR_PLATFORM=	NetBSD-1.[0-5]*-*
@@ -38,7 +41,8 @@ REPLACE_PERL+=	mono/metadata/make-bundle.pl
 EGDIR=		${PREFIX}/share/examples/mono
 CONF_FILES=	${EGDIR}/config ${PKG_SYSCONFDIR}/config
 CONF_FILES+=	${EGDIR}/machine.config ${PKG_SYSCONFDIR}/machine.config
-CONF_FILES+=	${EGDIR}/DefaultWsdlHelpGenerator.aspx ${PKG_SYSCONFDIR}/DefaultWsdlHelpGenerator.aspx
+CONF_FILES+=	${EGDIR}/DefaultWsdlHelpGenerator.aspx \
+		${PKG_SYSCONFDIR}/DefaultWsdlHelpGenerator.aspx
 
 .include "../../devel/glib2/buildlink2.mk"
 .include "../../devel/pkgconfig/buildlink2.mk"
